Исправил ошибки, полностью переработал сервисы и мапперы, теперь работает смена пользователя и смена пароля